--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -14,6 +14,9 @@
             <li>
               <a href="/blog/">Blog</a>
             </li>
+            <li>
+              <a href="/admin/">Admin</a>
+            </li>
           </ul>
         </nav>
       </div>
