--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -15,7 +15,7 @@
               <a href="/blog/">Blog</a>
             </li>
             <li>
-              <a href="/admin/">Admin</a>
+              <a href="https://xr-plus.netlify.app/admin/">Admin</a>
             </li>
           </ul>
         </nav>
