--- a/src/blog.njk
+++ b/src/blog.njk
@@ -3,7 +3,7 @@ title : blog
 layout : 'base.njk'
 ---
 <div class="section container">
-<h1 class="section-title">Recent articles</h1>
+<h1 class="section-title">Recent Articles</h1>
 
  <ul role="list" class="articles__list flow">
   
