--- a/src/index.njk
+++ b/src/index.njk
@@ -10,13 +10,14 @@ layout : 'base.njk'
         <p>We use this space to document our adventures in Design, sharing how I’ve overcome issues I’ve run into, useful resources, and more.</p>
         <p>Below are some of my favourite articles, or you can go to the blog page to see my most recent posts.</p>
         <div class="flex-group">
-          <a href="#featured-articles" class="btn btn--primary">Featured articles</a>
-          <a href="./blog" class="btn btn--neutral">Most recent articles</a>
+          <a href="#featured-articles" class="btn btn--primary">Featured Articles</a>
+          <a href="./blog" class="btn btn--neutral">Recent Articles</a>
         </div>
-      </div>
+      </div> 
       <div>
         <img src="//unsplash.it/510" alt="" class="hero__image">
       </div>
+     
   </div>
 </section>
 
