--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ title }}</title>
     <link rel="stylesheet" href="/style.css">
+    <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 
 </head>
